2004-11-10  MenTaLguY  <mental@rydia.net>

	* src/sp-item.cpp, src/sp-clippath.cpp, src/cp-mask.cpp:
	  minor refcounting tweaks

	* src/sp-image.cpp: fixed failure to release GdkPixbufLoader when
	  done with it (fixes bug #1063054)

2004-11-10  Kees Cook  <kees@outflux.net>

	* configure.ac, src/gc-core.h: corrected gc.h path detection.

2004-11-09  MenTaLguY  <mental@rydia.net>

	* src/dialogs/fileselector.cpp: fixed cut-and-paste refcount bug
	  between SVGPreview::setFileName and SVGPreview::setFromMem that
	  was leaking bitmap image preview SPDocuments

2004-11-09  Bryce Harrington <bryce@bryceharrington.org>

	* src/dialogs/item-properties.cpp

2004-11-09  MenTaLguY  <mental@rydia.net>

	* src/sp-item.cpp, src/style.cpp, src/style.h:
	  use 'display' rather than 'visibility' for hiding, and give display
	  a more "modern" representation in SPStyle like visibility's

2004-11-09  Kees Cook  <kees@outflux.net>

	* src/dialogs/xml-tree.cpp: added better context to the status bar.
	  added warning flash for id conflicts.
	* src/toolbox.cpp: killed some copy/paste code while bug hunting.

2004-11-08  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-item.h, src/sp-item.cpp
	  (isExplicitlyHidden, setExplicitlyHidden): New methods.

	* src/dialogs/item-properties.cpp: Change from having a `Visible'
	  checkbox that explicitly sets the SVG visibility property to
	  having a `Hide' checkbox that controls whether or not the
	  element has visibility:hidden.  (Mitigates #1061934.)

	* src/sp-object.h, src/sp-object.cpp (visible, setVisible):
	  Remove these methods.

2004-11-07  MenTaLguY  <mental@rydia.net>

	* src/gc-finalized.h: fix for Debian bug #279991 (cast to ptrdiff_t
	                      rather than int), and basic documentation

2004-11-06  MenTaLguY  <mental@rydia.net>

	* src/sp-item.cpp: fix desktop-specific version of SPItem::isHidden()
	                   to deal correctly with parent visibility

2004-11-05  MenTaLguY  <mental@rydia.net>
