@@ -1,3 +1,8 @@
+2004-11-11  MenTaLguY  <mental@rydia.net>
+
+	* src/inkscape.cpp, src/main.cpp, src/widgets/icon.cpp:
+	  removed sp_bitmap_icons
+
 2004-11-10  MenTaLguY  <mental@rydia.net>
 
 	* src/sp-item.cpp, src/sp-clippath.cpp, src/cp-mask.cpp:
